# agent-trace-viewer

./: .gitignore  LICENSE  README.md  index.html  pyproject.toml
src/agent_trace_viewer/: __init__.py  cli.py  model.py  parser.py  renderers.py  tokens.py
tests/: test_parser.py
tests/fixtures/: openai-chat.json
