[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-trace-viewer"
version = "0.1.0"
description = "Parse agent chat JSON into readable tool-call timelines and diagrams."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "hudsonK" }]
dependencies = ["tiktoken>=0.12"]
license = "MIT"
keywords = ["agent", "trace", "tool-calls", "mermaid", "llm-observability"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.scripts]
agent-trace = "agent_trace_viewer.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
